tests/snapshots/snapshot_tests__two_hot_spots__02_second_cluster_added.snap
---
source: tests/snapshot_tests.rs
expression: snapshot_of(&graph)
---
total_sum: 35

G-tree:
[d0] 0..65536  own=6  sum=35  I
├── [d1] 0..32768  own=6  sum=14  I
│   ├── [d2] 0..16384  own=6  sum=8  I
│   │   ├── [d3] 0..8192  own=2  sum=2  T
│   │   └── [d3] 8192..16384  own=0  sum=0  T
│   └── [d2] 16384..32768  own=0  sum=0  T
└── [d1] 32768..65536  own=6  sum=15  I
    ├── [d2] 32768..49152  own=0  sum=0  T
    └── [d2] 49152..65536  own=6  sum=9  I
        ├── [d3] 49152..57344  own=0  sum=0  T
        └── [d3] 57344..65536  own=3  sum=3  T

V-tree (active nodes):
[d0] 0..65536  own=6  sum=35  I
├── [d1] 0..32768  own=6  sum=14  I
│   ├── [d2] 0..16384  own=6  sum=8  I
│   │   ├── [d3] 0..8192  own=2  sum=2  T
│   │   └── [d3] 8192..16384  own=0  sum=0  T
│   └── [d2] 16384..32768  own=0  sum=0  T
└── [d1] 32768..65536  own=6  sum=15  I
    ├── [d2] 32768..49152  own=0  sum=0  T
    └── [d2] 49152..65536  own=6  sum=9  I
        ├── [d3] 49152..57344  own=0  sum=0  T
        └── [d3] 57344..65536  own=3  sum=3  T
